--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -1,33 +1,50 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <Button
-        android:id="@+id/EnterTask_addTask"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:text="ADD"
-        android:textColor="#ffffff"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="15dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:background="@drawable/add_button_selector"
-        />
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <ListView
         android:id="@+id/EnterTask_TaskList"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/EnterTask_addTask"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:fastScrollEnabled="true"
+        android:paddingBottom="@dimen/pad_10dp"
+        android:paddingTop="@dimen/pad_10dp"
         android:divider="#FFFFFF"
-        android:dividerHeight="1dp" />
+        android:dividerHeight="1dp">
+    <!--android:divider="@null"-->
+    <!--android:dividerHeight="0dp"-->
+    </ListView>
 
-        <!--android:divider="@null"-->
-        <!--android:dividerHeight="0dp"-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/gray_light"
+        android:gravity="center_vertical"
+        android:padding="@dimen/pad_5dp"
+        android:orientation="horizontal"
+        tools:context=".MainActivity">
 
-</RelativeLayout>
+
+        <EditText
+            android:id="@+id/txt"
+            style="@style/edittext_msg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:hint="@string/type_msg" >
+
+        </EditText>
+
+        <Button
+            android:id="@+id/btnSend"
+            style="@style/btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_send" />
+
+    </LinearLayout>
+
+</LinearLayout>
